fixing invisible button

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     left: 50vw;
     /* margin: 0 auto; */
     overflow-y: auto;
+    flex-wrap: ;
 }
 
 #popupContents {
